--- a/app/Resources/SyliusShopBundle/views/Taxon/_header.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Taxon/_header.html.twig
@@ -2,9 +2,7 @@
 
 {{ sonata_block_render_event('sylius.shop.taxon.header.before', {'taxon': taxon}) }}
 
-<h1 class="ui monster section dividing header">
-    {{ taxon.name }}
-    <div class="sub header">{{ taxon.description }}</div>
-</h1>
+{{ taxon.name }}
+{{ taxon.description }}
 
 {{ sonata_block_render_event('sylius.shop.taxon.header.after', {'taxon': taxon}) }}
