--- a/app/Resources/SyliusShopBundle/views/login.html.twig
+++ b/app/Resources/SyliusShopBundle/views/login.html.twig
@@ -1,6 +1,6 @@
 {% extends '@SyliusShop/layout.html.twig' %}
 
-{% form_theme form 'SyliusShopBundle:Ui:Form:theme.html.twig' %}
+{% form_theme form '@SyliusShop/Ui/Form/theme.html.twig' %}
 
 {% block content %}
     {% include '@SyliusShop/Login/_header.html.twig' %}
