--- a/app/Resources/SyliusShopBundle/views/Checkout/complete.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/complete.html.twig
@@ -12,7 +12,7 @@
 
         {{ sonata_block_render_event('sylius.shop.checkout.complete.after_content_header', {'order': order}) }}
 
-        {% include 'SyliusShopBundle:Ui::_flashes.html.twig' %}
+        {% include '@SyliusShop/Ui/_flashes.html.twig' %}
 
         {{ form_start(form, {'action': path('sylius_shop_checkout_complete'), 'attr': {'class': 'ui loadable form', 'novalidate': 'novalidate'}}) }}
             {{ form_errors(form) }}
@@ -20,7 +20,7 @@
 
             {{ sonata_block_render_event('sylius.shop.checkout.complete.before_summary', {'order': order, 'form': form}) }}
 
-            {% include 'SyliusShopBundle:Common/Order:_summary.html.twig' %}
+            {% include '@SyliusShop/Common/Order/_summary.html.twig' %}
 
             {{ sonata_block_render_event('sylius.shop.checkout.complete.after_summary', {'order': order}) }}
 
