--- a/app/Resources/SyliusShopBundle/views/Checkout/selectPayment.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/selectPayment.html.twig
@@ -1,6 +1,6 @@
 {% extends '@SyliusShop/Checkout/layout.html.twig' %}
 
-{% form_theme form 'SyliusShopBundle:Ui:Form:theme.html.twig' %}
+{% form_theme form '@SyliusShop/Ui/Form/theme.html.twig' %}
 
 {% block content %}
     {% include '@SyliusShop/Checkout/_steps.html.twig' with {'active': 'select_payment', 'orderTotal': order.total} %}
