--- a/app/Resources/SyliusShopBundle/views/Register/_header.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Register/_header.html.twig
@@ -1,16 +1,5 @@
-<div class="ui hidden divider"></div>
+{{ 'sylius.ui.register_in_the_store'|trans }}
 
-<div class="ui two column stackable grid">
-    <div class="column">
-        <h1 class="ui header">
-            <i class="circular user icon"></i>
-            <div class="content">
-                {{ 'sylius.ui.register_in_the_store'|trans }}
-                <div class="sub header">{{ 'sylius.ui.create_a_new_customer_account'|trans }}</div>
-            </div>
-        </h1>
-    </div>
-    <div class="middle aligned column">
-        <a href="{{ path('sylius_shop_login') }}" class="ui right floated basic button">{{ 'sylius.ui.have_an_account_already'|trans }} {{ 'sylius.ui.sign_in_here'|trans }}.</a>
-    </div>
-</div>
+{{ 'sylius.ui.create_a_new_customer_account'|trans }}
+
+<a href="{{ path('sylius_shop_login') }}"{{ 'sylius.ui.have_an_account_already'|trans }} {{ 'sylius.ui.sign_in_here'|trans }}</a>
