--- a/app/Resources/SyliusShopBundle/views/Account/AddressBook/_defaultAddressForm.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Account/AddressBook/_defaultAddressForm.html.twig
@@ -2,8 +2,8 @@
 
 {{ form_start(form, {'action': path('sylius_shop_account_address_book_set_as_default', {'id': id}), 'method': 'PATCH'}) }}
     <input hidden name="{{ form.defaultAddress.vars['full_name'] }}" value="{{ id }}" />
-    <button type="submit" class="ui labeled icon teal button">
-        <i class="save icon"></i>{{ 'sylius.ui.set_as_default'|trans }}
+    <button type="submit">
+        {{ 'sylius.ui.set_as_default'|trans }}
     </button>
 {{ form_row(form._token) }}
 {{ form_end(form, {'render_rest': false}) }}
