--- a/app/Resources/SyliusShopBundle/views/Account/AddressBook/create.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Account/AddressBook/create.html.twig
@@ -3,32 +3,23 @@
 {% form_theme form '@SyliusShop/Ui/Form/theme.html.twig' %}
 
 {% block subcontent %}
-    <div class="ui segment">
-        <h1 class="ui dividing header">
-            {{ 'sylius.ui.address_book'|trans }}
-            <div class="sub header">{{ 'sylius.ui.add_address'|trans }}</div>
-        </h1>
+    {{ 'sylius.ui.address_book'|trans }}
+    {{ 'sylius.ui.add_address'|trans }}
 
-        {{ sonata_block_render_event('sylius.shop.account.address_book.create.after_content_header', {'address': address}) }}
+    {{ sonata_block_render_event('sylius.shop.account.address_book.create.after_content_header', {'address': address}) }}
 
-        {{ form_start(form, {'action': path('sylius_shop_account_address_book_create'), 'attr': {'class': 'ui loadable form', 'novalidate': 'novalidate'}}) }}
-            {% include '@SyliusShop/Common/Form/_address.html.twig' with {'form': form} %}
-            <div class="ui two column grid">
-                <div class="column">
-                    <a href="{{ path('sylius_shop_account_address_book_index') }}" class="ui large icon labeled button">
-                        <i class="left arrow icon"></i> {{ 'sylius.ui.cancel'|trans }}
-                    </a>
-                </div>
-                <div class="right aligned column">
-                    <button type="submit" class="ui large icon labeled blue button">
-                        <i class="icon plus"></i> {{ 'sylius.ui.add'|trans }}
-                    </button>
-                </div>
-            </div>
+    {{ form_start(form, {'action': path('sylius_shop_account_address_book_create'), 'attr': {'class': 'ui loadable form', 'novalidate': 'novalidate'}}) }}
+    {% include '@SyliusShop/Common/Form/_address.html.twig' with {'form': form} %}
 
-        {{ sonata_block_render_event('sylius.shop.account.address_book.create.form', {'address': address}) }}
+    <a href="{{ path('sylius_shop_account_address_book_index') }}">
+        {{ 'sylius.ui.cancel'|trans }}
+    </a>
+    <button type="submit">
+        {{ 'sylius.ui.add'|trans }}
+    </button>
 
-        {{ form_row(form._token) }}
-        {{ form_end(form, {'render_rest': false}) }}
-    </div>
+    {{ sonata_block_render_event('sylius.shop.account.address_book.create.form', {'address': address}) }}
+
+    {{ form_row(form._token) }}
+    {{ form_end(form, {'render_rest': false}) }}
 {% endblock %}
