--- a/app/Resources/SyliusShopBundle/views/Account/requestPasswordReset.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Account/requestPasswordReset.html.twig
@@ -3,28 +3,16 @@
 {% form_theme form '@SyliusShop/Ui/Form/theme.html.twig' %}
 
 {% block content %}
-    <div class="ui hidden divider"></div>
-    <div class="ui three column centered grid">
-        <div class="column">
-            <h1 class="ui header">
-                <i class="circular lock icon"></i>
-                <div class="content">
-                    {{ 'sylius.ui.reset_password'|trans }}
-                    <div class="sub header">{{ 'sylius.ui.set_a_new_password_for_your_account'|trans }}</div>
-                </div>
+    {{ 'sylius.ui.reset_password'|trans }}
+    {{ 'sylius.ui.set_a_new_password_for_your_account'|trans }}
 
-                {{ sonata_block_render_event('sylius.shop.request_password_reset_token.after_content_header') }}
-            </h1>
-            <div class="ui segment">
-                {{ form_start(form, {'action': path('sylius_shop_request_password_reset_token'), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
-                {{ form_row(form.email) }}
+    {{ sonata_block_render_event('sylius.shop.request_password_reset_token.after_content_header') }}
+    {{ form_start(form, {'action': path('sylius_shop_request_password_reset_token'), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
+    {{ form_row(form.email) }}
 
-                {{ sonata_block_render_event('sylius.shop.request_password_reset_token.form', {'form': form}) }}
+    {{ sonata_block_render_event('sylius.shop.request_password_reset_token.form', {'form': form}) }}
 
-                {{ form_row(form._token) }}
-                <button type="submit" class="ui fluid large primary submit button">{{ 'sylius.ui.reset'|trans }}</button>
-                {{ form_end(form, {'render_rest': false}) }}
-            </div>
-        </div>
-    </div>
+    {{ form_row(form._token) }}
+    <button type="submit">{{ 'sylius.ui.reset'|trans }}</button>
+    {{ form_end(form, {'render_rest': false}) }}
 {% endblock %}
