--- a/app/Resources/SyliusShopBundle/views/Common/Form/_address.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Common/Form/_address.html.twig
@@ -1,13 +1,11 @@
-<div class="two fields">
-    {{ form_row(form.firstName) }}
-    {{ form_row(form.lastName) }}
-</div>
+{{ form_row(form.firstName) }}
+{{ form_row(form.lastName) }}
 {{ form_row(form.company) }}
 {{ form_row(form.street) }}
 
 {% include '@SyliusShop/Common/Form/_countryCode.html.twig' with {'form': form.countryCode} %}
 
-<div class="province-container field" data-url="{{ path('sylius_shop_ajax_render_province_form') }}">
+<div data-url="{{ path('sylius_shop_ajax_render_province_form') }}">
     {% if form.provinceCode is defined %}
         {{ form_row(form.provinceCode, {'attr': {'class': 'ui dropdown'}}) }}
     {% elseif form.provinceName is defined %}
@@ -19,8 +17,6 @@
     {{ form_errors(form) }}
 {% endif %}
 
-<div class="two fields">
     {{ form_row(form.city) }}
     {{ form_row(form.postcode) }}
-</div>
 {{ form_row(form.phoneNumber) }}
