--- a/app/Resources/SyliusShopBundle/views/Common/_address.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Common/_address.html.twig
@@ -11,6 +11,6 @@
     {% if address|sylius_province_name is not empty %}
         {{ address|sylius_province_name }}<br/>
     {% endif %}
-    <i class="{{ address.countryCode|lower }} flag"></i>
+    <i class="{{ address.countryCode|lower }}"></i>
     {{ address.countryCode|sylius_country_name|upper }}
 </address>
