--- a/app/Resources/SyliusShopBundle/views/Product/_box.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Product/_box.html.twig
@@ -2,23 +2,15 @@
 
 {{ sonata_block_render_event('sylius.shop.product.index.before_box', {'product': product}) }}
 
-<div class="ui fluid card">
-    <a href="{{ path('sylius_shop_product_show', {'slug': product.slug, '_locale': product.translation.locale}) }}" class="blurring dimmable image">
-        <div class="ui dimmer">
-            <div class="content">
-                <div class="center">
-                    <div class="ui inverted button">{{ 'sylius.ui.view_more'|trans }}</div>
-                </div>
-            </div>
-        </div>
-        {% include '@SyliusShop/Product/_mainImage.html.twig' with {'product': product} %}
-    </a>
-    <div class="content">
-        <a href="{{ path('sylius_shop_product_show', {'slug': product.slug, '_locale': product.translation.locale}) }}" class="header sylius-product-name">{{ product.name }}</a>
-        {% if not product.variants.empty() %}
-            <div class="sylius-product-price">{{ money.calculatePrice(product|sylius_resolve_variant) }}</div>
-        {% endif %}
-    </div>
-</div>
+<a href="{{ path('sylius_shop_product_show', {'slug': product.slug, '_locale': product.translation.locale}) }}"
+   class="blurring dimmable image">
+    {{ 'sylius.ui.view_more'|trans }}
+    {% include '@SyliusShop/Product/_mainImage.html.twig' with {'product': product} %}
+</a>
+<a href="{{ path('sylius_shop_product_show', {'slug': product.slug, '_locale': product.translation.locale}) }}"
+   class="sylius-product-name">{{ product.name }}</a>
+{% if not product.variants.empty() %}
+    <div class="sylius-product-price">{{ money.calculatePrice(product|sylius_resolve_variant) }}</div>
+{% endif %}
 
 {{ sonata_block_render_event('sylius.shop.product.index.after_box', {'product': product}) }}
