--- a/app/Resources/SyliusShopBundle/views/Common/Order/_table.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Common/Order/_table.html.twig
@@ -1,4 +1,4 @@
-<table class="ui celled table" id="sylius-order">
+<table id="sylius-order">
     <thead>
         {% include '@SyliusShop/Common/Order/Table/_headers.html.twig' %}
     </thead>
