--- a/app/Resources/SyliusShopBundle/views/Cart/Summary/_item.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Cart/Summary/_item.html.twig
@@ -4,22 +4,22 @@
 {% set product_variant = item.variant %}
 
 <tr>
-    <td class="single line">
+    <td>
         {% include '@SyliusShop/Product/_info.html.twig' with {'variant': product_variant} %}
     </td>
-    <td class="right aligned">
+    <td>
         {% if item.unitPrice != item.discountedUnitPrice %}
-            <span class="sylius-regular-unit-price">{{ money.convertAndFormat(item.unitPrice) }}</span>
+            {{ money.convertAndFormat(item.unitPrice) }}
         {% endif %}
-        <span class="sylius-unit-price">{{ money.convertAndFormat(item.discountedUnitPrice) }}</span>
+        {{ money.convertAndFormat(item.discountedUnitPrice) }}
     </td>
-    <td class="center aligned">
-        <span class="sylius-quantity">{{ form_widget(form.quantity) }}</span>
+    <td>
+        {{ form_widget(form.quantity) }}
     </td>
-    <td class="center aligned">
-        <button type="button" data-redirect="{{ path('sylius_shop_cart_summary') }}" data-url="{{ path('sylius_shop_ajax_cart_item_remove', {'id': item.id}) }}" class="ui circular icon button sylius-cart-remove-button" data-csrf-token="{{ csrf_token(item.id) }}"><i class="remove icon"></i></button>
+    <td>
+        <button type="button" data-redirect="{{ path('sylius_shop_cart_summary') }}" data-url="{{ path('sylius_shop_ajax_cart_item_remove', {'id': item.id}) }}" data-csrf-token="{{ csrf_token(item.id) }}"></button>
     </td>
-    <td class="right aligned">
-        <span class="sylius-total">{{ money.convertAndFormat(item.subtotal) }}</span>
+    <td>
+        {{ money.convertAndFormat(item.subtotal) }}
     </td>
 </tr>
