--- a/app/Resources/SyliusShopBundle/views/Checkout/Address/_form.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/Address/_form.html.twig
@@ -1,6 +1,6 @@
 <div id="sylius-shipping-address">
     {% include '@SyliusShop/Checkout/Address/_addressBookSelect.html.twig' %}
-    <h3 class="ui dividing header">{{ 'sylius.ui.shipping_address'|trans }}</h3>
+    {{ 'sylius.ui.shipping_address'|trans }}
     {% if form.customer is defined %}
         {% include '@SyliusShop/Common/Form/_login.html.twig' with {'form': form.customer} %}
     {% endif %}
@@ -11,9 +11,8 @@
 </div>
 
 <div id="sylius-billing-address">
-    <div class="ui hidden divider"></div>
     {% include '@SyliusShop/Checkout/Address/_addressBookSelect.html.twig' %}
-    <h3 class="ui dividing header">{{ 'sylius.ui.billing_address'|trans }}</h3>
+    {{ 'sylius.ui.billing_address'|trans }}
     {% include '@SyliusShop/Common/Form/_address.html.twig' with {'form': form.billingAddress, 'order': order} %}
 
     {{ sonata_block_render_event('sylius.shop.checkout.address.billing_address_form', {'order': order}) }}
