--- a/app/Resources/SyliusShopBundle/views/Checkout/Complete/_navigation.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/Complete/_navigation.html.twig
@@ -1,1 +1,1 @@
-<button type="submit" class="ui huge primary fluid icon labeled button"><i class="check icon"></i> {{ 'sylius.ui.place_order'|trans }}</button>
+<button type="submit">{{ 'sylius.ui.place_order'|trans }}</button>
