--- a/app/Resources/SyliusShopBundle/views/Checkout/SelectPayment/_unavailable.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/SelectPayment/_unavailable.html.twig
@@ -1,7 +1,4 @@
-<div class="ui icon message" id="sylius-order-cannot-be-paid">
-    <i class="warning sign icon"></i>
-    <div class="content">
-        <div class="header">{{ 'sylius.ui.warning'|trans }}</div>
-        <p>{{ 'sylius.ui.no_payment_methods_available'|trans }}.</p>
-    </div>
+<div id="sylius-order-cannot-be-paid">
+    {{ 'sylius.ui.warning'|trans }}
+    {{ 'sylius.ui.no_payment_methods_available'|trans }}
 </div>
