--- a/app/Resources/SyliusShopBundle/views/Checkout/selectShipping.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/selectShipping.html.twig
@@ -7,36 +7,29 @@
 
     {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.after_steps', {'order': order}) }}
 
-    <div class="ui stackable grid">
-        <div class="eleven wide column">
-            <div class="ui padded segment" id="sylius-shipping-methods">
-                {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.before_form', {'order': order}) }}
+    <div id="sylius-shipping-methods">
+        {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.before_form', {'order': order}) }}
 
-                {{ form_start(form, {'action': path('sylius_shop_checkout_select_shipping'), 'attr': {'class': 'ui loadable form', 'novalidate': 'novalidate'}}) }}
-                    {{ form_errors(form) }}
-                    <input type="hidden" name="_method" value="PUT" />
+        {{ form_start(form, {'action': path('sylius_shop_checkout_select_shipping'), 'attr': {'class': 'ui loadable form', 'novalidate': 'novalidate'}}) }}
+        {{ form_errors(form) }}
+        <input type="hidden" name="_method" value="PUT"/>
 
-                    {% include '@SyliusShop/Checkout/SelectShipping/_form.html.twig' %}
-                    <div class="ui hidden divider"></div>
+        {% include '@SyliusShop/Checkout/SelectShipping/_form.html.twig' %}
 
-                    {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.before_navigation', {'order': order}) }}
+        {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.before_navigation', {'order': order}) }}
 
-                    {% include '@SyliusShop/Checkout/SelectShipping/_navigation.html.twig' %}
+        {% include '@SyliusShop/Checkout/SelectShipping/_navigation.html.twig' %}
 
-                    {{ form_row(form._token) }}
-                {{ form_end(form, {'render_rest': false}) }}
-            </div>
-        </div>
-        <div class="five wide column">
-            {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.before_summary', {'order': order}) }}
-
-            {% include '@SyliusShop/Checkout/_summary.html.twig' with {'order': order} %}
-
-            {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.before_support', {'order': order}) }}
-
-            {% include '@SyliusShop/Checkout/_support.html.twig' %}
-
-            {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.after_support', {'order': order}) }}
-        </div>
+        {{ form_row(form._token) }}
+        {{ form_end(form, {'render_rest': false}) }}
     </div>
+    {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.before_summary', {'order': order}) }}
+
+    {% include '@SyliusShop/Checkout/_summary.html.twig' with {'order': order} %}
+
+    {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.before_support', {'order': order}) }}
+
+    {% include '@SyliusShop/Checkout/_support.html.twig' %}
+
+    {{ sonata_block_render_event('sylius.shop.checkout.select_shipping.after_support', {'order': order}) }}
 {% endblock %}
