--- a/app/Resources/SyliusShopBundle/views/Common/Order/Table/_item.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Common/Order/Table/_item.html.twig
@@ -5,8 +5,8 @@
         {% include '@SyliusShop/Product/_info.html.twig' with {'variant': item.variant} %}
     </td>
     <td>
-        <span class="sylius-unit-price">{{ money.format(item.unitPrice, order.currencyCode) }}</span>
+        {{ money.format(item.unitPrice, order.currencyCode) }}
     </td>
-    <td class="center aligned">{{ item.quantity }}</td>
-    <td class="right aligned">{{ money.format(item.subtotal, order.currencyCode) }}</td>
+    <td>{{ item.quantity }}</td>
+    <td>{{ money.format(item.subtotal, order.currencyCode) }}</td>
 </tr>
