--- a/app/Resources/SyliusShopBundle/views/Common/Order/_addresses.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Common/Order/_addresses.html.twig
@@ -1,12 +1,8 @@
-<div class="ui segment">
-    <div class="ui two column divided stackable grid">
-        <div class="column" id="sylius-shipping-address">
-            <div class="ui small dividing header">{{ 'sylius.ui.shipping_address'|trans }}</div>
-            {% include '@SyliusShop/Common/_address.html.twig' with {'address': order.shippingAddress} %}
-        </div>
-        <div class="column" id="sylius-billing-address">
-            <div class="ui small dividing header">{{ 'sylius.ui.billing_address'|trans }}</div>
-            {% include '@SyliusShop/Common/_address.html.twig' with {'address': order.billingAddress} %}
-        </div>
-    </div>
+<div id="sylius-shipping-address">
+    {{ 'sylius.ui.shipping_address'|trans }}
+    {% include '@SyliusShop/Common/_address.html.twig' with {'address': order.shippingAddress} %}
+</div>
+<div id="sylius-billing-address">
+    {{ 'sylius.ui.billing_address'|trans }}
+    {% include '@SyliusShop/Common/_address.html.twig' with {'address': order.billingAddress} %}
 </div>
