--- a/app/Resources/SyliusShopBundle/views/Common/Order/_shipments.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Common/Order/_shipments.html.twig
@@ -1,10 +1,5 @@
 {% for shipment in order.shipments %}
-    <div class="ui large icon message">
-        <i class="truck icon"></i>
-        <div class="content">
-            <div class="header" id="sylius-shipping-method">
-                {{ shipment.method }}
-            </div>
-        </div>
+    <div id="sylius-shipping-method">
+        {{ shipment.method }}
     </div>
 {% endfor %}
