--- a/app/Resources/SyliusShopBundle/views/Common/Order/_summary.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Common/Order/_summary.html.twig
@@ -1,11 +1,9 @@
 {% include '@SyliusShop/Common/Order/_addresses.html.twig' %}
 {% include '@SyliusShop/Common/Order/_table.html.twig' %}
 
-<div class="ui two column stackable grid">
-    <div class="column" id="sylius-payments">
-        {% include '@SyliusShop/Common/Order/_payments.html.twig' %}
-    </div>
-    <div class="column" id="sylius-shipments">
-        {% include '@SyliusShop/Common/Order/_shipments.html.twig' %}
-    </div>
+<div id="sylius-payments">
+    {% include '@SyliusShop/Common/Order/_payments.html.twig' %}
+</div>
+<div id="sylius-shipments">
+    {% include '@SyliusShop/Common/Order/_shipments.html.twig' %}
 </div>
