--- a/app/Resources/SyliusShopBundle/views/Login/_register.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Login/_register.html.twig
@@ -1,5 +1,4 @@
-<h4 class="ui dividing header">{{ 'sylius.ui.new_customers'|trans }}</h4>
-<a href="{{ path('sylius_shop_register') }}" class="ui big green labeled icon fluid button">
-    <i class="signup icon"></i>
+{{ 'sylius.ui.new_customers'|trans }}
+<a href="{{ path('sylius_shop_register') }}">
     {{ 'sylius.ui.create_an_account'|trans }}
 </a>
