--- a/app/Resources/SyliusShopBundle/views/Menu/_currencySwitch.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Menu/_currencySwitch.html.twig
@@ -1,15 +1,13 @@
 {% if currencies|length > 1 %}
-    <div class="ui pointing dropdown link item" id="sylius-currency-selector">
-        <span class="text sylius-active-currency">{{ active }}</span>
-        <i class="dropdown icon"></i>
-        <div class="menu">
-            {% for code in currencies %}
-                {% if code is not same as(active) %}
-                <a href="{{ path('sylius_shop_switch_currency', {'code': code}) }}" class="item sylius-available-currency">
+    <div id="sylius-currency-selector">
+        {{ active }}
+
+        {% for code in currencies %}
+            {% if code is not same as(active) %}
+                <a href="{{ path('sylius_shop_switch_currency', {'code': code}) }}">
                     {{ code }}
                 </a>
-                {% endif %}
-            {% endfor %}
-        </div>
+            {% endif %}
+        {% endfor %}
     </div>
 {% endif %}
