--- a/app/Resources/SyliusShopBundle/views/Product/Index/_search.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Product/Index/_search.html.twig
@@ -2,8 +2,7 @@
     {% for filter in products.definition.enabledFilters %}
         {{ sylius_grid_render_filter(products, filter) }}
     {% endfor %}
-    <button type="submit" class="ui primary icon labeled button"><i
-                class="search icon"></i> {{ 'sylius.ui.search'|trans }}</button>
+    <button type="submit">{{ 'sylius.ui.search'|trans }}</button>
     <a href="{{ path('sylius_shop_product_index', {'slug': app.request.attributes.get('slug')}) }}">
         {{ 'sylius.ui.clear'|trans }}
     </a>
