--- a/app/Resources/SyliusShopBundle/views/Product/Index/_sorting.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Product/Index/_sorting.html.twig
@@ -33,18 +33,18 @@
 
     {{ 'sylius.ui.sort'|trans }}
     {{ current_sorting_label }}
-    <a class="item" href="{{ default_path }}"
+    <a href="{{ default_path }}"
        data-text="{{ 'sylius.ui.by_position'|trans|lower }}">{{ 'sylius.ui.by_position'|trans }}</a>
-    <a class="item" href="{{ from_a_to_z_path }}"
+    <a href="{{ from_a_to_z_path }}"
        data-text="{{ 'sylius.ui.from_a_to_z'|trans|lower }}">{{ 'sylius.ui.from_a_to_z'|trans }}</a>
-    <a class="item" href="{{ from_z_to_a_path }}"
+    <a href="{{ from_z_to_a_path }}"
        data-text="{{ 'sylius.ui.from_z_to_a'|trans|lower }}">{{ 'sylius.ui.from_z_to_a'|trans }}</a>
-    <a class="item" href="{{ newest_first_path }}"
+    <a href="{{ newest_first_path }}"
        data-text="{{ 'sylius.ui.newest_first'|trans|lower }}">{{ 'sylius.ui.newest_first'|trans }}</a>
-    <a class="item" href="{{ oldest_first_path }}"
+    <a href="{{ oldest_first_path }}"
        data-text="{{ 'sylius.ui.oldest_first'|trans|lower }}">{{ 'sylius.ui.oldest_first'|trans }}</a>
-    <a class="item" href="{{ cheapest_first_path }}"
+    <a href="{{ cheapest_first_path }}"
        data-text="{{ 'sylius.ui.cheapest_first'|trans|lower }}">{{ 'sylius.ui.cheapest_first'|trans }}</a>
-    <a class="item" href="{{ most_expensive_first_path }}"
+    <a href="{{ most_expensive_first_path }}"
        data-text="{{ 'sylius.ui.most_expensive_first'|trans|lower }}">{{ 'sylius.ui.most_expensive_first'|trans }}</a>
 {% endif %}
