--- a/app/Resources/SyliusShopBundle/views/Product/Show/_breadcrumb.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Product/Show/_breadcrumb.html.twig
@@ -1,6 +1,4 @@
-<div class="ui breadcrumb">
-    <a href="{{ path('sylius_shop_homepage') }}" class="section">{{ 'sylius.ui.home'|trans }}</a>
-    <div class="divider"> / </div>
+ <a href="{{ path('sylius_shop_homepage') }}">{{ 'sylius.ui.home'|trans }}</a>
     {% if product.mainTaxon is not null %}
         {% set taxon = product.mainTaxon %}
         {% set ancestors = taxon.ancestors|reverse %}
@@ -9,13 +7,11 @@
             {% if ancestor.root %}
                 <div class="section">{{ ancestor.name }}</div>
             {% else %}
-                <a href="{{ path('sylius_shop_product_index', {'slug': ancestor.slug, '_locale': ancestor.translation.locale}) }}" class="section">{{ ancestor.name }}</a>
+                <a href="{{ path('sylius_shop_product_index', {'slug': ancestor.slug, '_locale': ancestor.translation.locale}) }}">{{ ancestor.name }}</a>
             {% endif %}
             <div class="divider"> / </div>
         {% endfor %}
 
-        <a href="{{ path('sylius_shop_product_index', {'slug': taxon.slug, '_locale': taxon.translation.locale}) }}" class="section">{{ taxon.name }}</a>
-        <div class="divider"> / </div>
+        <a href="{{ path('sylius_shop_product_index', {'slug': taxon.slug, '_locale': taxon.translation.locale}) }}">{{ taxon.name }}</a>
     {% endif %}
-    <div class="active section">{{ product.name }}</div>
-</div>
+    {{ product.name }}
