--- a/app/Resources/SyliusShopBundle/views/Product/Show/_outOfStock.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Product/Show/_outOfStock.html.twig
@@ -1,3 +1,3 @@
-<div class="negative message" id="sylius-product-out-of-stock">
+<div id="sylius-product-out-of-stock">
     {{ 'sylius.ui.out_of_stock'|trans }}
 </div>
