--- a/app/Resources/SyliusShopBundle/views/Ui/Form/Buttons/_create.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Form/Buttons/_create.html.twig
@@ -1,6 +1,2 @@
-<div class="ui basic segment">
-    <div class="ui buttons">
-        <button class="ui labeled icon primary button" type="submit"><i class="plus icon"></i>{{- 'sylius.ui.create'|trans -}}</button>
-        {% include '@SyliusShop/Ui/Form/Buttons/_cancel.html.twig' with {'path': paths.cancel|default(null)} %}
-    </div>
-</div>
+<button type="submit">{{- 'sylius.ui.create'|trans -}}</button>
+{% include '@SyliusShop/Ui/Form/Buttons/_cancel.html.twig' with {'path': paths.cancel|default(null)} %}
