--- a/app/Resources/SyliusShopBundle/views/Ui/Grid/Field/nameAndDescription.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Grid/Field/nameAndDescription.html.twig
@@ -1,4 +1,4 @@
-<strong>{{ data.name }}</strong>
+{{ data.name }}
 {% if data.description is not empty %}
-    <p>{{ data.description }}</p>
+    {{ data.description }}
 {% endif %}
