--- a/app/Resources/SyliusShopBundle/views/Ui/Layout/centered.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Layout/centered.html.twig
@@ -15,7 +15,7 @@
     {% block stylesheets %}
     {% endblock %}
 </head>
-<body class="centered">
+<body>
 {% block pre_content %}
 {% endblock %}
 
