--- a/app/Resources/SyliusShopBundle/views/Product/Show/Tabs/_details.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Product/Show/Tabs/_details.html.twig
@@ -1,4 +1,4 @@
-<div class="ui bottom attached tab segment active" data-tab="details">
+<div data-tab="details">
     {{ sonata_block_render_event('sylius.shop.product.show.tab_details', {'product': product}) }}
 
     {% if product.description is not empty %}
