--- a/app/Resources/SyliusShopBundle/views/Taxon/_verticalMenu.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Taxon/_verticalMenu.html.twig
@@ -1,15 +1,13 @@
 {{ sonata_block_render_event('sylius.shop.product.index.before_vertical_menu', {'taxon': taxon}) }}
 
-<div class="ui fluid vertical menu">
-    <div class="header item">{{ taxon.name }}</div>
+    {{ taxon.name }}
     {% if taxon.parent is not empty and not taxon.parent.isRoot() %}
-        <a href="{{ path('sylius_shop_product_index', {'slug': taxon.parent.slug, '_locale': taxon.parent.translation.locale}) }}" class="item">
-            <i class="up arrow icon"></i> {{ 'sylius.ui.go_level_up'|trans }}
+        <a href="{{ path('sylius_shop_product_index', {'slug': taxon.parent.slug, '_locale': taxon.parent.translation.locale}) }}">
+            {{ 'sylius.ui.go_level_up'|trans }}
         </a>
     {% endif %}
     {% for child in taxon.children %}
-    <a href="{{ path('sylius_shop_product_index', {'slug': child.slug, '_locale': child.translation.locale}) }}" class="item">{{ child.name }}</a>
+        <a href="{{ path('sylius_shop_product_index', {'slug': child.slug, '_locale': child.translation.locale}) }}">{{ child.name }}</a>
     {% endfor %}
-</div>
 
 {{ sonata_block_render_event('sylius.shop.product.index.after_vertical_menu', {'taxon': taxon}) }}
