--- a/app/Resources/SyliusShopBundle/views/Ui/Form/Buttons/_update.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Form/Buttons/_update.html.twig
@@ -1,6 +1,2 @@
-<div class="ui basic segment">
-    <div class="ui buttons">
-        <button class="ui labeled icon primary button" type="submit" id="sylius_save_changes_button"><i class="save icon"></i> {{ 'sylius.ui.save_changes'|trans }}</button>
-        {% include '@SyliusShop/Ui/Form/Buttons/_cancel.html.twig' with {'path': paths.cancel|default(null)} %}
-    </div>
-</div>
+<button type="submit" id="sylius_save_changes_button">{{ 'sylius.ui.save_changes'|trans }}</button>
+{% include '@SyliusShop/Ui/Form/Buttons/_cancel.html.twig' with {'path': paths.cancel|default(null)} %}
