--- a/app/Resources/SyliusShopBundle/views/Ui/Form/imagesTheme.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Form/imagesTheme.html.twig
@@ -19,15 +19,14 @@
                 {% endfor %}
             {% endif %}
 
-            <div data-form-collection="list" class="ui three column stackable grid">
+            <div data-form-collection="list">
                 {% for child in form %}
                     {{ self.collection_item(child, allow_delete, button_delete_label, loop.index0) }}
                 {% endfor %}
             </div>
 
             {% if prototype is defined and allow_add %}
-                <a href="#" class="ui labeled icon button" data-form-collection="add">
-                    <i class="plus square outline icon"></i>
+                <a href="#" data-form-collection="add">
                     {{ button_add_label|trans }}
                 </a>
             {% endif %}
@@ -40,8 +39,7 @@
         <div data-form-collection="item" data-form-collection-index="{{ index }}" class="column">
             {{ form_widget(form) }}
             {% if allow_delete %}
-                <a href="#" data-form-collection="delete" class="ui red labeled icon button" style="margin-bottom: 1em;">
-                    <i class="trash icon"></i>
+                <a href="#" data-form-collection="delete">
                     {{ button_delete_label|trans }}
                 </a>
             {% endif %}
@@ -51,41 +49,29 @@
 
 {% block sylius_product_image_widget %}
     {% spaceless %}
-    <div class="ui upload box segment">
         {{ form_row(form.type) }}
-        <label for="{{ form.file.vars.id }}" class="ui icon labeled button"><i class="cloud upload icon"></i> {{ 'sylius.ui.choose_file'|trans }}</label>
+        <label for="{{ form.file.vars.id }}">{{ 'sylius.ui.choose_file'|trans }}</label>
     {% if form.vars.value.path|default(null) is not null %}
-        <img class="ui small bordered image" src="{{ form.vars.value.path|imagine_filter('sylius_small') }}" alt="{{ form.vars.value.type }}" />
+        <img src="{{ form.vars.value.path|imagine_filter('sylius_small') }}" alt="{{ form.vars.value.type }}" />
     {% endif %}
-        <div class="ui hidden element">
             {{ form_widget(form.file) }}
-        </div>
-        <div class="ui element">
             {{- form_errors(form.file) -}}
-        </div>
     {% if product.id is not null and 0 != product.variants|length and not product.simple %}
         {{ form_row(form.productVariants) }}
     {% endif %}
-    </div>
     {% endspaceless %}
 {% endblock %}
 
 {% block sylius_taxon_image_widget %}
     {% spaceless %}
-    <div class="ui upload box segment">
         {{ form_row(form.type) }}
         {% if form.vars.value.path|default(null) is null %}
-            <label for="{{ form.file.vars.id }}" class="ui icon labeled button"><i class="cloud upload icon"></i> {{ 'sylius.ui.choose_file'|trans }}</label>
+            <label for="{{ form.file.vars.id }}">{{ 'sylius.ui.choose_file'|trans }}</label>
         {% else %}
-            <img class="ui small bordered image" src="{{ form.vars.value.path|imagine_filter('sylius_small') }}" alt="{{ form.vars.value.type }}" />
-            <label for="{{ form.file.vars.id }}" class="ui icon labeled button"><i class="cloud upload icon"></i> {{ 'sylius.ui.change_file'|trans }}</label>
+            <img src="{{ form.vars.value.path|imagine_filter('sylius_small') }}" alt="{{ form.vars.value.type }}" />
+            <label for="{{ form.file.vars.id }}">{{ 'sylius.ui.change_file'|trans }}</label>
         {% endif %}
-        <div class="ui hidden element">
             {{ form_widget(form.file) }}
-        </div>
-        <div class="ui element">
             {{- form_errors(form.file) -}}
-        </div>
-    </div>
     {% endspaceless %}
 {% endblock %}
