--- a/app/Resources/SyliusShopBundle/views/Ui/Form/theme.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Form/theme.html.twig
@@ -20,29 +20,23 @@
 
 {% block checkbox_row -%}
     <div class="field{% if (not compound or force_error|default(false)) and not valid %} error{% endif %}">
-        <div class="ui toggle checkbox">
             {{- form_widget(form) -}}
             {{- form_label(form) -}}
             {{- form_errors(form) -}}
-        </div>
     </div>
 {%- endblock checkbox_row %}
 
 {% block radio_row -%}
     <div class="field{% if (not compound or force_error|default(false)) and not valid %} error{% endif %}">
-        <div class="ui radio checkbox">
             {{- form_label(form) -}}
             {{- form_widget(form) -}}
             {{- form_errors(form) -}}
-        </div>
     </div>
 {%- endblock radio_row %}
 
 {% block money_widget -%}
-    <div class="ui labeled input">
-        <div class="ui label">{{ currency|sylius_currency_symbol }}</div>
+        {{ currency|sylius_currency_symbol }}
         {{- form_widget(form) -}}
-    </div>
 {%- endblock money_widget %}
 
 {% block choice_row -%}
@@ -56,24 +50,15 @@
 
 {%- block choice_widget_expanded -%}
     <div {{ block('widget_container_attributes') }}>
-        <div class="grouped fields">
             {%- for child in form %}
-                <div class="field">
-                    <div class="ui toggle checkbox">
                         {{- form_label(child, null, {translation_domain: choice_translation_domain}) -}}
                         {{- form_widget(child) -}}
-                    </div>
-                </div>
             {% endfor -%}
-        </div>
     </div>
 {%- endblock choice_widget_expanded -%}
 
 {% block percent_widget -%}
-    <div class="ui right labeled input">
-        {{- form_widget(form) -}}
-        <div class="ui basic label">%</div>
-    </div>
+        {{- form_widget(form) -}}%
 {%- endblock percent_widget %}
 
 {% block collection_widget -%}
@@ -95,15 +80,12 @@
                 {% endfor %}
             {% endif %}
 
-            <div data-form-collection="list">
                 {% for child in form %}
                     {{ self.collection_item(child, allow_delete, button_delete_label, loop.index0) }}
                 {% endfor %}
-            </div>
 
             {% if prototype is defined and allow_add %}
-                <a href="#" class="ui labeled icon button" data-form-collection="add">
-                    <i class="plus square outline icon"></i>
+                <a href="#" data-form-collection="add">
                     {{ button_add_label|trans }}
                 </a>
             {% endif %}
@@ -116,8 +98,7 @@
         <div data-form-collection="item" data-form-collection-index="{{ index }}">
             {{ form_widget(form) }}
             {% if allow_delete %}
-                <a href="#" data-form-collection="delete" class="ui red labeled icon button" style="margin-bottom: 1em;">
-                    <i class="trash icon"></i>
+                <a href="#" data-form-collection="delete">
                     {{ button_delete_label|trans }}
                 </a>
             {% endif %}
@@ -126,71 +107,46 @@
 {% endmacro %}
 
 {% block sylius_province_widget %}
-<div class="ui compact segment">
-    <div class="inline fields">
         {{ form_row(form.code) }}
         {{ form_row(form.name) }}
         {{ form_row(form.abbreviation) }}
-    </div>
-</div>
 {% endblock %}
 
 {% block sylius_zone_member_widget %}
-    <div class="ui compact segment">
-        <div class="inline fields">
             {{ form_row(form.code) }}
-        </div>
-    </div>
 {% endblock %}
 
 {% block sylius_promotion_rule_widget %}
-    <div class="ui segment">
         {{ form_widget(form) }}
-    </div>
 {% endblock %}
 
 {% block sylius_promotion_action_widget %}
-    <div class="ui segment">
         {{ form_widget(form) }}
-    </div>
 {% endblock %}
 
 {% block sylius_promotion_configuration_widget %}
-    <div class="configuration">
         {% for child in form %}
             <hr/>{{ form_row(child) }}<hr/>
         {% endfor %}
-    </div>
 {% endblock %}
 
 {% block sylius_product_option_value_widget %}
-    <div class="ui segment">
         {{ form_row(form.code) }}
-            <div class="five fields">
             {% for locale, translationForm in form.translations %}
                 {{ form_row(translationForm.value, {'label': locale|sylius_locale_name}) }}
                 {% if 0 == loop.index % 5 %}
-                </div>
-                <div class="five fields">
+
                 {% endif %}
             {% endfor %}
-            </div>
-    </div>
 {% endblock %}
 
 {% block sylius_translations_row -%}
-    <h4 class="ui dividing header">{{ form_label(form) }}</h4>
-    <div class="ui grid">
+    {{ form_label(form) }}
         {% for translation in form %}
-            <div class="four wide column">
                 {{ form_label(translation, translation.vars.name|sylius_locale_name) }}
-            </div>
-            <div class="twelve wide column">
                 {{ form_widget(translation) }}
-            </div>
             {{- form_errors(form) -}}
         {% endfor %}
-    </div>
 {%- endblock sylius_translations_row %}
 
 {% block sylius_resource_autocomplete_choice_row %}
@@ -206,26 +162,16 @@
             data-load-edit-url="{{ load_edit_url }}"
         >
             {{- form_widget(form, {'attr': {'class' : 'autocomplete'}}) -}}
-            <i class="dropdown icon"></i>
-            <div class="default text">{% if placeholder is defined %} {{ placeholder|trans }} {% endif %}</div>
-            <div class="menu"></div>
+            {% if placeholder is defined %} {{ placeholder|trans }} {% endif %}
         </div>
         {{- form_errors(form) -}}
     </div>
 {% endblock %}
 
 {% block sylius_product_variant_generation_widget %}
-    <div class="ui segment">
-        <div class="ui two column stackable grid">
-            <div class="column">
                 {{ form_row(form.optionValues, {'label': false}) }}
-            </div>
-            <div class="column">
                 {{ form_row(form.code) }}
                 {{ form_row(form.name) }}
-            </div>
-        </div>
-        <h4 class="ui dividing header">{{ 'sylius.ui.pricing'|trans }}</h4>
+        {{ 'sylius.ui.pricing'|trans }}
         {{ form_row(form.channelPricings, {'label': false}) }}
-    </div>
 {% endblock %}
