--- a/app/Resources/SyliusShopBundle/views/Ui/Grid/Action/archive.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Grid/Action/archive.html.twig
@@ -4,7 +4,7 @@
     <input type="hidden" name="_method" value="PATCH">
     <input type="hidden" name="sylius_archivable[_token]" value="{{ csrf_token('sylius_archivable') }}" />
 
-    <button class="ui brown labeled icon button" type="submit" data-requires-confirmation>
+    <button type="submit" data-requires-confirmation>
         <i class="{{ action.icon|default('archive') }} icon"></i>
         {% if data.archivedAt is not null %}
             {{ action.options.restore_label|default('sylius.ui.restore')|trans }}
