--- a/app/Resources/SyliusShopBundle/views/Ui/Grid/_history.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Grid/_history.html.twig
@@ -5,7 +5,7 @@
 {% set data = resources.data %}
 
 {% if data|length > 0 %}
-    <table class="ui stackable celled table">
+    <table>
         <thead>
             <tr>
                 {{ table.headers(resources, definition, app.request.attributes) }}
