--- a/app/Resources/SyliusShopBundle/views/Ui/Layout/sidebar.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Layout/sidebar.html.twig
@@ -17,29 +17,23 @@
 </head>
 
 <body class="pushable">
-<div class="ui sidebar vertical inverted menu visible left" id="sidebar">
+<div id="sidebar">
     {% block sidebar %}
     {% endblock %}
 </div>
-<div class="ui fixed inverted menu">
-    {% block topbar %}
+{% block topbar %}
+{% endblock %}
+<div id="wrapper">
+    {% include '@SyliusShop/Ui/_flashes.html.twig' %}
+
+    {% block pre_content %}
     {% endblock %}
-</div>
-<div class="pusher">
-    <div class="full height" id="wrapper">
-        <div id="content">
-            {% include '@SyliusShop/Ui/_flashes.html.twig' %}
 
-            {% block pre_content %}
-            {% endblock %}
+    {% block content %}
+    {% endblock %}
 
-            {% block content %}
-            {% endblock %}
-
-            {% block post_content %}
-            {% endblock %}
-        </div>
-    </div>
+    {% block post_content %}
+    {% endblock %}
 </div>
 
 {% include '@SyliusShop/Ui/Modal/_confirmation.html.twig' %}
