--- a/app/Resources/SyliusShopBundle/views/Ui/Macro/buttons.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Macro/buttons.html.twig
@@ -40,14 +40,14 @@
 {% endmacro %}
 
 {% macro filter(message) %}
-    <button class="ui blue labeled icon button" type="submit">
-        <i class="icon search"></i> {{ message is empty ? 'sylius.ui.filter'|trans : message }}
+    <button type="submit">
+        {{ message is empty ? 'sylius.ui.filter'|trans : message }}
     </button>
 {% endmacro %}
 
 {% macro resetFilters(url, message) %}
-    <a class="ui labeled icon button" href="{{ url }}">
-        <i class="icon remove"></i> {{ message is empty ? 'sylius.ui.clear_filters'|trans : message }}
+    <a href="{{ url }}">
+        {{ message is empty ? 'sylius.ui.clear_filters'|trans : message }}
     </a>
 {% endmacro %}
 
@@ -55,7 +55,7 @@
     <form action="{{ url }}" method="post">
         <input type="hidden" name="_method" value="DELETE">
         <button class="ui red {% if labeled %}labeled {% endif %}icon button" type="submit" data-requires-confirmation>
-            <i class="icon trash"></i> {{ (message is empty and labeled) ? 'sylius.ui.delete'|trans : message }}
+            {{ (message is empty and labeled) ? 'sylius.ui.delete'|trans : message }}
         </button>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token(resourceId) }}" />
     </form>
