--- a/app/Resources/SyliusShopBundle/views/Ui/Macro/headers.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Macro/headers.html.twig
@@ -1,13 +1,9 @@
 {% macro default(header, icon, subheader) %}
-<h1 class="ui header">
     {% if icon is not empty %}
-    <i class="circular {{ icon }} icon"></i>
+        <i class="circular {{ icon }} icon"></i>
     {% endif %}
-    <div class="content">
-        {{ header }}
-        {% if subheader is not empty %}
-        <div class="sub header">{{ subheader }}</div>
-        {% endif %}
-    </div>
-</h1>
+    {{ header }}
+    {% if subheader is not empty %}
+        {{ subheader }}
+    {% endif %}
 {% endmacro %}
