--- a/app/Resources/SyliusShopBundle/views/Ui/Macro/pagination.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Macro/pagination.html.twig
@@ -5,14 +5,9 @@
 {% endmacro %}
 
 {% macro perPage(paginator, paginationLimits) %}
-    <div class="ui simple fluid dropdown item">
-        {{ 'sylius.ui.show'|trans }} {{ paginator.maxPerPage }}
-        <i class="dropdown icon"></i>
-        <div class="menu">
-        {% for limit in paginationLimits if limit != paginator.maxPerPage %}
-            {% set path = path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({'limit': limit})) %}
-            <a class="item" href="{{ path }}">{{ limit }}</a>
-        {% endfor %}
-        </div>
-    </div>
+    {{ 'sylius.ui.show'|trans }} {{ paginator.maxPerPage }}
+    {% for limit in paginationLimits if limit != paginator.maxPerPage %}
+        {% set path = path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({'limit': limit})) %}
+        <a href="{{ path }}">{{ limit }}</a>
+    {% endfor %}
 {% endmacro %}
