--- a/app/Resources/SyliusShopBundle/views/Ui/Macro/table.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Macro/table.html.twig
@@ -11,31 +11,26 @@
         {% endif %}
     {% endfor %}
     {% if definition.actionGroups.item is defined and definition.getActions('item')|length > 0 %}
-        <th class="sylius-table-column-actions">{{ 'sylius.ui.actions'|trans }}</th>
+        <th>{{ 'sylius.ui.actions'|trans }}</th>
     {% endif %}
 {% endmacro %}
 
 {% macro row(grid, definition, row) %}
-    <tr class="item">
-    {% for field in definition.enabledFields|sort_by('position') %}
-        <td>{{ sylius_grid_render_field(grid, field, row) }}</td>
-    {% endfor %}
-    {% if definition.actionGroups.item is defined and definition.getEnabledActions('item')|length > 0 %}
-        <td>
-            <div class="ui buttons">
+    <tr>
+        {% for field in definition.enabledFields|sort_by('position') %}
+            <td>{{ sylius_grid_render_field(grid, field, row) }}</td>
+        {% endfor %}
+        {% if definition.actionGroups.item is defined and definition.getEnabledActions('item')|length > 0 %}
+            <td>
                 {% for action in definition.getEnabledActions('item')|sort_by('position') %}
                     {{ sylius_grid_render_action(grid, action, row) }}
                 {% endfor %}
-            </div>
-            {% if definition.actionGroups.subitem is defined and definition.getEnabledActions('subitem')|length > 0 %}
-            <div class="ui divider"></div>
-            <div class="ui buttons">
-                {% for action in definition.getEnabledActions('subitem')|sort_by('position') %}
-                    {{ sylius_grid_render_action(grid, action, row) }}
-                {% endfor %}
-            </div>
-            {% endif %}
-        </td>
-    {% endif %}
+                {% if definition.actionGroups.subitem is defined and definition.getEnabledActions('subitem')|length > 0 %}
+                    {% for action in definition.getEnabledActions('subitem')|sort_by('position') %}
+                        {{ sylius_grid_render_action(grid, action, row) }}
+                    {% endfor %}
+                {% endif %}
+            </td>
+        {% endif %}
     </tr>
 {% endmacro %}
