--- a/app/Resources/SyliusShopBundle/views/Ui/Menu/simple.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/Menu/simple.html.twig
@@ -1,10 +1,8 @@
 {% extends 'knp_menu.html.twig' %}
 
 {% block root %}
-    <div class="ui fluid vertical menu">
-        <div class="header item">{{ item.label|trans }}</div>
+        {{ item.label|trans }}
         {{ block('list') }}
-    </div>
 {% endblock %}
 
 {% block list %}
@@ -14,7 +12,7 @@
 {% endblock %}
 
 {% block item %}
-    <a class="item" href="{{ item.uri }}">
+    <a href="{{ item.uri }}">
         {{ block('icon') }}
         {{ item.label|trans }}
     </a>
