--- a/app/Resources/SyliusShopBundle/views/register.html.twig
+++ b/app/Resources/SyliusShopBundle/views/register.html.twig
@@ -7,18 +7,16 @@
 
     {{ sonata_block_render_event('sylius.shop.register.after_content_header') }}
 
-    <div class="ui padded segment">
-        {{ sonata_block_render_event('sylius.shop.register.before_form') }}
+    {{ sonata_block_render_event('sylius.shop.register.before_form') }}
 
-        {{ form_start(form, {'action': path('sylius_shop_register'), 'attr': {'class': 'ui loadable form', 'novalidate': 'novalidate'}}) }}
-            {% include '@SyliusShop/Register/_form.html.twig' %}
+    {{ form_start(form, {'action': path('sylius_shop_register'), 'attr': {'class': 'ui loadable form', 'novalidate': 'novalidate'}}) }}
+    {% include '@SyliusShop/Register/_form.html.twig' %}
 
-            {{ sonata_block_render_event('sylius.shop.register.form', {'form': form}) }}
+    {{ sonata_block_render_event('sylius.shop.register.form', {'form': form}) }}
 
-            <button type="submit" class="ui large primary button">
-                {{ 'sylius.ui.create_an_account'|trans }}
-            </button>
-        {{ form_row(form._token) }}
-        {{ form_end(form, {'render_rest': false}) }}
-    </div>
+    <button type="submit">
+        {{ 'sylius.ui.create_an_account'|trans }}
+    </button>
+    {{ form_row(form._token) }}
+    {{ form_end(form, {'render_rest': false}) }}
 {% endblock %}
