flash message fix

--- a/app/Resources/SyliusShopBundle/views/Ui/_flashes.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/_flashes.html.twig
@@ -9,7 +9,7 @@
                 {% set result = 'info' %}
                 {% set icon = 'info' %}
             {% endif %}
-            <div class="{{ result|default('positive') }}">
+            <div class="{{ result|default('positive') }} sylius-flash-message">
                 <i class="{{ icon|default('checkmark') }} icon"></i>
                 {% set header = 'sylius.ui.'~type %}
                 {{ header|trans }}
