revert some elements for tests

--- a/app/Resources/SyliusShopBundle/views/Cart/Summary/_item.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Cart/Summary/_item.html.twig
@@ -11,7 +11,7 @@
         {% if item.unitPrice != item.discountedUnitPrice %}
             {{ money.convertAndFormat(item.unitPrice) }}
         {% endif %}
-        {{ money.convertAndFormat(item.discountedUnitPrice) }}
+        <span class="sylius-unit-price">{{ money.convertAndFormat(item.discountedUnitPrice) }}</span>
     </td>
     <td>
         {{ form_widget(form.quantity) }}
@@ -20,6 +20,6 @@
         <button type="button" data-redirect="{{ path('sylius_shop_cart_summary') }}" data-url="{{ path('sylius_shop_ajax_cart_item_remove', {'id': item.id}) }}" data-csrf-token="{{ csrf_token(item.id) }}"></button>
     </td>
     <td>
-        {{ money.convertAndFormat(item.subtotal) }}
+        <span class="sylius-total">{{ money.convertAndFormat(item.subtotal) }}</span>
     </td>
 </tr>
