--- a/app/Resources/SyliusShopBundle/views/Menu/_security.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Menu/_security.html.twig
@@ -1,7 +1,7 @@
 {% if is_granted('ROLE_USER') %}
     <div class="item">{{ 'sylius.ui.hello'|trans }} {{ app.user.customer.fullName }}!</div>
     <a href="{{ path('sylius_shop_account_dashboard') }}">{{ 'sylius.ui.my_account'|trans }}</a>
-    <a href="{{ path('sylius_shop_logout') }}">{{ 'sylius.ui.logout'|trans }}</a>
+    <a href="{{ path('sylius_shop_logout') }}" class="sylius-logout-button">{{ 'sylius.ui.logout'|trans }}</a>
 {% else %}
     <a href="{{ path('sylius_shop_login') }}">{{ 'sylius.ui.login'|trans }}</a>
     <a href="{{ path('sylius_shop_register') }}">{{ 'sylius.ui.register'|trans }}</a>
