--- a/app/Resources/SyliusShopBundle/views/Product/Show/_addToCart.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Product/Show/_addToCart.html.twig
@@ -7,7 +7,7 @@
 
     {{ form_start(form, {'action': path('sylius_shop_ajax_cart_add_item', {'productId': product.id}), 'attr': {'id': 'sylius-product-adding-to-cart', 'class': 'ui loadable form', 'novalidate': 'novalidate', 'data-redirect': path(configuration.getRedirectRoute('summary'))}}) }}
     {{ form_errors(form) }}
-    <div id="sylius-cart-validation-error"></div>
+    <div class="sylius-validation-error" id="sylius-cart-validation-error"></div>
     {% if not product.simple %}
         {% if product.variantSelectionMethodChoice %}
             {% include '@SyliusShop/Product/Show/_variants.html.twig' %}
