--- a/app/Resources/SyliusShopBundle/views/ProductReview/_list.html.twig
+++ b/app/Resources/SyliusShopBundle/views/ProductReview/_list.html.twig
@@ -1,9 +1,11 @@
 {% import '@SyliusShop/Ui/Macro/messages.html.twig' as messages %}
 
 {% if product_reviews|length > 0 %}
-    {% for review in product_reviews %}
-        {% include '@SyliusShop/ProductReview/_single.html.twig' %}
-    {% endfor %}
+    <div class="comments">
+        {% for review in product_reviews %}
+            {% include '@SyliusShop/ProductReview/_single.html.twig' %}
+        {% endfor %}
+    </div>
 {% else %}
     {{ messages.info('sylius.ui.there_are_no_reviews') }}
 {% endif %}
