--- a/app/Resources/SyliusShopBundle/views/Checkout/SelectShipping/_choice.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/SelectShipping/_choice.html.twig
@@ -1,8 +1,12 @@
 {% import '@SyliusShop/Common/Macro/money.html.twig' as money %}
 
-{{ form_widget(form) }}
-<a class="header">{{ form_label(form) }}</a>
-{% if method.description is not null %}
-    {{ method.description }}
-{% endif %}
-{{ money.convertAndFormat(fee) }}
+<div class="item">
+    {{ form_widget(form) }}
+    <a class="header">{{ form_label(form) }}</a>
+    {% if method.description is not null %}
+        {{ method.description }}
+    {% endif %}
+    <div class="fee">
+        {{ money.convertAndFormat(fee) }}
+    </div>
+</div>
