--- a/app/Resources/SyliusShopBundle/views/Checkout/_header.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/_header.html.twig
@@ -1,6 +1,8 @@
 <a href="{{ path('sylius_shop_homepage') }}"><img src="{{ asset('assets/shop/img/logo.png') }}"/></a>
-{% if order.customer.id|default(null) is not null %}
-    <div id="purchaser-email">{{ 'sylius.ui.checking_out_as'|trans }} {{ order.customer.fullName|default(order.customer.email) }}</div>
-{% else %}
-    <a href="{{ path('sylius_shop_login') }}" class="item">{{ 'sylius.ui.sign_in'|trans }}</a>
-{% endif %}
+<div class="right menu">
+    {% if order.customer.id|default(null) is not null %}
+        <div class="item" id="purchaser-email">{{ 'sylius.ui.checking_out_as'|trans }} {{ order.customer.fullName|default(order.customer.email) }}.</div>
+    {% else %}
+        <a href="{{ path('sylius_shop_login') }}" class="item">{{ 'sylius.ui.sign_in'|trans }}</a>
+    {% endif %}
+</div>
