--- a/app/Resources/SyliusShopBundle/views/Checkout/SelectPayment/_choice.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/SelectPayment/_choice.html.twig
@@ -1,6 +1,8 @@
 <div class="item">
     {{ form_widget(form) }}
-    <a class="header">{{ form_label(form) }}</a>
+    <div class="content">
+        <a class="header">{{ form_label(form) }}</a>
+    </div>
     {% if method.description is not null %}
         {{ method.description }}
     {% endif %}
