Adjust HTML structure to pass Behat tests

--- a/app/Resources/SyliusShopBundle/views/Checkout/SelectShipping/_choice.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/SelectShipping/_choice.html.twig
@@ -2,10 +2,12 @@
 
 <div class="item">
     {{ form_widget(form) }}
-    <a class="header">{{ form_label(form) }}</a>
-    {% if method.description is not null %}
-        {{ method.description }}
-    {% endif %}
+    <div class="content">
+        <a class="header">{{ form_label(form) }}</a>
+        {% if method.description is not null %}
+            {{ method.description }}
+        {% endif %}
+    </div>
     <div class="fee">
         {{ money.convertAndFormat(fee) }}
     </div>
