--- a/app/Resources/SyliusShopBundle/views/Ui/_flashes.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Ui/_flashes.html.twig
@@ -9,7 +9,7 @@
                 {% set result = 'info' %}
                 {% set icon = 'info' %}
             {% endif %}
-            <div class="{{ result|default('positive') }} sylius-flash-message">
+            <div class="message {{ result|default('positive') }} sylius-flash-message">
                 <i class="close icon"></i>
                 <i class="{{ icon|default('checkmark') }} icon"></i>
                 <div class="content">
