--- a/app/Resources/SyliusShopBundle/views/Cart/Summary/_coupon.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Cart/Summary/_coupon.html.twig
@@ -1,3 +1,5 @@
-{{ form_widget(form, {'attr': {'placeholder': 'sylius.ui.enter_your_code'|trans~'...'}}) }}
-<button type="submit" id="sylius-save">{{ 'sylius.ui.apply_coupon'|trans }}</button>
-{{ form_errors(form) }}
+<div id="sylius-coupon">
+    {{ form_widget(form, {'attr': {'placeholder': 'sylius.ui.enter_your_code'|trans~'...'}}) }}
+    <button type="submit" id="sylius-save">{{ 'sylius.ui.apply_coupon'|trans }}</button>
+    {{ form_errors(form) }}
+</div>
