--- a/app/Resources/SyliusShopBundle/views/Product/Show/Tabs/_attributes.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Product/Show/Tabs/_attributes.html.twig
@@ -5,8 +5,8 @@
         <tbody>
         {% for attribute in product.getAttributesByLocale(configuration.request.locale, configuration.request.defaultLocale)|sort_by('attribute.position') %}
             <tr>
-                <td>{{ attribute.name }}</td>
-                <td>
+                <td class="sylius-product-attribute-name">{{ attribute.name }}</td>
+                <td class="sylius-product-attribute-value">
                     {% include [('SyliusAttributeBundle:Types:'~attribute.attribute.type~'.html.twig'), 'SyliusAttributeBundle:Types:default.html.twig'] with {'attribute': attribute} %}
                 </td>
             </tr>
