--- a/app/Resources/SyliusShopBundle/views/Cart/_widget.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Cart/_widget.html.twig
@@ -3,7 +3,9 @@
 <div id="sylius-cart-button">
     {{ sonata_block_render_event('sylius.shop.partial.cart.summary.before_widget_content', {'cart': cart}) }}
 
+    <span id="sylius-cart-total">
     {{ money.convertAndFormat(cart.itemsTotal) }}
+    </span>
     {% transchoice cart.items|length %}sylius.ui.item.choice{% endtranschoice %}
 
     {{ sonata_block_render_event('sylius.shop.partial.cart.summary.after_widget_content', {'cart': cart}) }}
@@ -18,7 +20,6 @@
             {{ item.quantity }} x <strong>{{ item.product }}</strong> {{ money.convertAndFormat(item.unitPrice) }}
         {% endfor %}
         {{ 'sylius.ui.subtotal'|trans }}: {{ money.convertAndFormat(cart.itemsTotal) }}
-
         <a href="{{ path('sylius_shop_cart_summary') }}">{{ 'sylius.ui.view_and_edit_cart'|trans }}</a>
         <a href="{{ path('sylius_shop_checkout_start') }}">{{ 'sylius.ui.checkout'|trans }}</a>
     {% endif %}
