--- a/app/Resources/SyliusShopBundle/views/Checkout/SelectPayment/_choice.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/SelectPayment/_choice.html.twig
@@ -1,5 +1,9 @@
 <div class="item">
-    {{ form_widget(form) }}
+    <div class="field">
+        <div class="ui radio checkbox">
+            {{ form_widget(form) }}
+        </div>
+    </div>
     <div class="content">
         <a class="header">{{ form_label(form) }}</a>
     </div>
