--- a/app/Resources/SyliusShopBundle/views/Checkout/SelectShipping/_choice.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/SelectShipping/_choice.html.twig
@@ -1,7 +1,11 @@
 {% import '@SyliusShop/Common/Macro/money.html.twig' as money %}
 
 <div class="item">
-    {{ form_widget(form) }}
+    <div class="field">
+        <div class="ui radio checkbox">
+            {{ form_widget(form) }}
+        </div>
+    </div>
     <div class="content">
         <a class="header">{{ form_label(form) }}</a>
         {% if method.description is not null %}
