--- a/app/Resources/SyliusShopBundle/views/Common/Form/_address.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Common/Form/_address.html.twig
@@ -5,7 +5,7 @@
 
 {% include '@SyliusShop/Common/Form/_countryCode.html.twig' with {'form': form.countryCode} %}
 
-<div data-url="{{ path('sylius_shop_ajax_render_province_form') }}">
+<div class="province-container" data-url="{{ path('sylius_shop_ajax_render_province_form') }}">
     {% if form.provinceCode is defined %}
         {{ form_row(form.provinceCode, {'attr': {'class': 'ui dropdown'}}) }}
     {% elseif form.provinceName is defined %}
