Adjust HTML structure to pass Behat tests

--- a/app/Resources/SyliusShopBundle/views/Common/_address.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Common/_address.html.twig
@@ -2,6 +2,7 @@
     {% if address.company is not null %}
         {{ address.company }}
     {% endif %}
+    <strong>{{ address.firstName }} {{ address.lastName }}</strong>
     {{ address.firstName }} {{ address.lastName }}
     {% if address.phoneNumber is not null %}
         {{ address.phoneNumber }}
