--- a/app/Resources/SyliusShopBundle/views/Product/_info.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Product/_info.html.twig
@@ -1,14 +1,19 @@
 {% set product = variant.product %}
 
 {% include '@SyliusShop/Product/_mainImage.html.twig' with {'product': product, 'filter': 'sylius_shop_product_tiny_thumbnail'} %}
-<a href="{{ path('sylius_shop_product_show', {'slug': product.slug, '_locale': product.translation.locale}) }}" class="sylius-product-name">{{ product.name }}</a>
+<a href="{{ path('sylius_shop_product_show', {'slug': product.slug, '_locale': product.translation.locale}) }}"
+   class="sylius-product-name">{{ product.name }}</a>
 {{ variant.code }}
 {% if product.hasOptions() %}
-    {% for optionValue in variant.optionValues %}
-        <div data-sylius-option-name="{{ optionValue.name }}">
-            {{ optionValue.value }}
-        </div>
-    {% endfor %}
+    <div class="sylius-product-options">
+        {% for optionValue in variant.optionValues %}
+            <div data-sylius-option-name="{{ optionValue.name }}">
+                {{ optionValue.value }}
+            </div>
+        {% endfor %}
+    </div>
 {% elseif variant.name is not null %}
-    {{ variant.name }}
+    <div class="sylius-product-variant-name">
+        {{ variant.name }}
+    </div>
 {% endif %}
