--- a/app/Resources/SyliusShopBundle/views/Checkout/Address/_addressBookSelect.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Checkout/Address/_addressBookSelect.html.twig
@@ -1,22 +1,24 @@
 {% if app.user is not empty and app.user.customer is not empty and app.user.customer.addresses|length > 0 %}
-    {{ 'sylius.ui.select_address_from_book'|trans }}
+    <div class="ui dropdown">
+        {{ 'sylius.ui.select_address_from_book'|trans }}
 
-    {% for address in app.user.customer.addresses %}
-        <div
-                data-id="{{ address.id }}"
-                data-first-name="{{ address.firstName }}"
-                data-last-name="{{ address.lastName }}"
-                data-company="{{ address.company }}"
-                data-street="{{ address.street }}"
-                data-country-code="{{ address.countryCode }}"
-                data-province-code="{{ address.provinceCode }}"
-                data-province-name="{{ address.provinceName }}"
-                data-city="{{ address.city }}"
-                data-postcode="{{ address.postcode }}"
-                data-phone-number="{{ address.phoneNumber }}"
-        >
-            {{ address.firstName }} {{ address.lastName }}, {{ address.street }}
-            , {{ address.city }} {{ address.postcode }}, {{ address.countryCode|sylius_country_name }}
-        </div>
-    {% endfor %}
+        {% for address in app.user.customer.addresses %}
+            <div class="item"
+                 data-id="{{ address.id }}"
+                 data-first-name="{{ address.firstName }}"
+                 data-last-name="{{ address.lastName }}"
+                 data-company="{{ address.company }}"
+                 data-street="{{ address.street }}"
+                 data-country-code="{{ address.countryCode }}"
+                 data-province-code="{{ address.provinceCode }}"
+                 data-province-name="{{ address.provinceName }}"
+                 data-city="{{ address.city }}"
+                 data-postcode="{{ address.postcode }}"
+                 data-phone-number="{{ address.phoneNumber }}"
+            >
+                {{ address.firstName }} {{ address.lastName }}, {{ address.street }}
+                , {{ address.city }} {{ address.postcode }}, {{ address.countryCode|sylius_country_name }}
+            </div>
+        {% endfor %}
+    </div>
 {% endif %}
