--- a/app/Resources/SyliusShopBundle/views/Cart/Summary/_header.html.twig
+++ b/app/Resources/SyliusShopBundle/views/Cart/Summary/_header.html.twig
@@ -5,6 +5,6 @@
     <input type="hidden" name="_method" value="DELETE"/>
     <input type="hidden" name="_csrf_token" value="{{ csrf_token(cart.id) }}"/>
     <button type="submit" id="sylius-cart-clear">
-        <i class="icon remove"></i> {{ 'sylius.ui.clear_cart'|trans }}
+        {{ 'sylius.ui.clear_cart'|trans }}
     </button>
 </form>
